# speech-2-sum

./: .gitignore  MIC-AUDIO_IMPL.md  README.md  STATE_04092026--1-15.md  SUMMARIZE_IMPL.md  download_model.py  download_parakeet.py  download_summarizer.py  download_voxtral.py  install.py  pyproject.toml  setup.py  summarize.py  transcribe.py  transcribe_parakeet.py  transcribe_voxtral.py  utils.py
